[gd_scene load_steps=37 format=2]

[ext_resource path="res://lukasbtn.gd" type="Script" id=1]
[ext_resource path="res://lukas.png" type="Texture" id=2]
[ext_resource path="res://menuBG.png" type="Texture" id=3]
[ext_resource path="res://Kaffe_title.png" type="Texture" id=4]
[ext_resource path="res://Kaffe_cost.png" type="Texture" id=5]
[ext_resource path="res://Synd_title.png" type="Texture" id=6]
[ext_resource path="res://Synd_cost.png" type="Texture" id=7]
[ext_resource path="res://cola_title.png" type="Texture" id=8]
[ext_resource path="res://cola_cost.png" type="Texture" id=9]
[ext_resource path="res://github_title.png" type="Texture" id=10]
[ext_resource path="res://github_cost.png" type="Texture" id=11]
[ext_resource path="res://vscode_title.png" type="Texture" id=12]
[ext_resource path="res://vscode_cost.png" type="Texture" id=13]
[ext_resource path="res://latte_title.png" type="Texture" id=14]
[ext_resource path="res://latte_cost.png" type="Texture" id=15]
[ext_resource path="res://scratch_title.png" type="Texture" id=16]
[ext_resource path="res://scratch_cost.png" type="Texture" id=17]
[ext_resource path="res://5x5_title.png" type="Texture" id=18]
[ext_resource path="res://5x5_cost.png" type="Texture" id=19]
[ext_resource path="res://Elin_title.png" type="Texture" id=20]
[ext_resource path="res://Elin_cost.png" type="Texture" id=21]
[ext_resource path="res://dream_title.png" type="Texture" id=22]
[ext_resource path="res://dream_cost.png" type="Texture" id=23]
[ext_resource path="res://pepsi_title.png" type="Texture" id=24]
[ext_resource path="res://pepsi_cost.png" type="Texture" id=25]
[ext_resource path="res://svart_title.png" type="Texture" id=26]
[ext_resource path="res://svart_cost.png" type="Texture" id=27]
[ext_resource path="res://vim_title.png" type="Texture" id=28]
[ext_resource path="res://vim_cost.png" type="Texture" id=29]
[ext_resource path="res://javad_title.png" type="Texture" id=30]
[ext_resource path="res://javad_cost.png" type="Texture" id=31]
[ext_resource path="res://Gunnar_title.png" type="Texture" id=32]
[ext_resource path="res://Gunnar_cost.png" type="Texture" id=33]
[ext_resource path="res://Bubblegum.ttf" type="DynamicFontData" id=34]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 34 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.0
margin_bottom = 800.0

[node name="lukasbtn" type="TextureButton" parent="."]
margin_left = 84.0
margin_top = -231.0
margin_right = 322.0
margin_bottom = 76.0
script = ExtResource( 1 )

[node name="lukaspic" type="Sprite" parent="lukasbtn"]
position = Vector2( 102.694, 147.032 )
scale = Vector2( 2.368, 2.35375 )
texture = ExtResource( 2 )

[node name="menuBG" type="TextureRect" parent="."]
margin_right = 400.0
margin_bottom = 800.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 400.0
margin_bottom = 800.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 370.0
margin_bottom = 770.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 740.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 41.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 152.0
margin_bottom = 86.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 152.0
margin_bottom = 131.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 152.0
margin_bottom = 176.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="TextureButton5" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 152.0
margin_bottom = 221.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="TextureButton6" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 152.0
margin_bottom = 266.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )

[node name="TextureButton7" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 152.0
margin_bottom = 311.0
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="TextureButton8" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 152.0
margin_bottom = 356.0
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 19 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 308.0
margin_bottom = 740.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 152.0
margin_bottom = 41.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 45.0
margin_right = 152.0
margin_bottom = 86.0
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 21 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 152.0
margin_bottom = 131.0
texture_normal = ExtResource( 22 )
texture_hover = ExtResource( 23 )

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 135.0
margin_right = 152.0
margin_bottom = 176.0
texture_normal = ExtResource( 24 )
texture_hover = ExtResource( 25 )

[node name="TextureButton5" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 180.0
margin_right = 152.0
margin_bottom = 221.0
texture_normal = ExtResource( 26 )
texture_hover = ExtResource( 27 )

[node name="TextureButton6" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 225.0
margin_right = 152.0
margin_bottom = 266.0
texture_normal = ExtResource( 28 )
texture_hover = ExtResource( 29 )

[node name="TextureButton7" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 270.0
margin_right = 152.0
margin_bottom = 311.0
texture_normal = ExtResource( 30 )
texture_hover = ExtResource( 31 )

[node name="TextureButton8" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 315.0
margin_right = 152.0
margin_bottom = 356.0
texture_normal = ExtResource( 32 )
texture_hover = ExtResource( 33 )

[node name="score" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = -390.0
margin_right = 70.0
margin_bottom = -319.0
rect_rotation = -0.169838
theme = SubResource( 2 )
text = "0"
[connection signal="button_down" from="lukasbtn" to="lukasbtn" method="_on_lukasbtn_button_down"]
[connection signal="button_up" from="lukasbtn" to="lukasbtn" method="_on_lukasbtn_button_up"]
[connection signal="pressed" from="lukasbtn" to="lukasbtn" method="_on_lukasbtn_pressed"]
